[project]
name = "creationrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-genai>=1.59.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "pymupdf>=1.25.0",
    "tiktoken>=0.8.0",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.40.0",
]
